# bevy-events-docs-creator

./: Cargo.toml  README.md  events.md
src/: generate_markdown.rs  lib.rs  parse_functions.rs
