[package]
name = "bevy-events-docs-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
glob = "*"
markdown = "*"

[[bin]]
name = "generate-bevy-events-doc"
