[package]
name = "bevy-events-docs-creator"
version = "0.1.0"
edition = "2021"
description = "Create event documentation for Bevy project"
repository = "https://github.com/allevo/bevy-events-docs-creator"
license = "MIT"
keywords = ["bevy", "documentation", "event"]
categories = ["command-line-utilities", "game-development"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
glob = "*"
markdown = "*"

[[bin]]
name = "generate-bevy-events-doc"
